src/test/ui/object-safety/object-safety-supertrait-mentions-Self.stderr
error[E0038]: the trait `Baz` cannot be made into an object
  --> $DIR/object-safety-supertrait-mentions-Self.rs:15:31
   |
LL | fn make_baz<T:Baz>(t: &T) -> &dyn Baz {
   |                               ^^^^^^^ the trait `Baz` cannot be made into an object
   |
   = note: the trait cannot use `Self` as a type parameter in the supertraits or where-clauses

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
